Added 1 new card

--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>CSS Animations - Card effects</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="card-1">
+        <div class="content-1">
+            <h2>Design</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae. Quos obcaecati, cum officiis doloribus atque sed a? Ipsa reiciendis quam, nemo veniam nisi dignissimos atque hic commodi! Ducimus?</p>
+            <a href="#">Read More</a>
+        </div>
+    </div>
+
+    <div class="card-2">
+        <div class="imgbox-2">
+            <img src="/img/1.jpg" alt="">
+        </div>
+        <div class="content-2">
+            <h2>Card Hover</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae.</p>
+        </div>
+    </div>
     
     <script src="script.js"></script>
 </body>
