Added 1 new card

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae.</p>
         </div>
     </div>
+
+    <div class="card-3">
+        <div class="content-3">
+            <h2>Captain Marvel</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae. </p>
+            <a href="#">Read More</a>
+        </div>
+        <img src="/img/1.png" alt="">
+    </div>
     
     <script src="script.js"></script>
 </body>
