modified some imgs, paragraphs and anchor tags

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="card-1">
         <div class="content-1">
             <h2>Design</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae. Quos obcaecati, cum officiis doloribus atque sed a? Ipsa reiciendis quam, nemo veniam nisi dignissimos atque hic commodi! Ducimus?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae. Quos obcaecati, cum officiis doloribus atque sed a? </p>
             <a href="#">Read More</a>
         </div>
     </div>
@@ -22,14 +22,14 @@
             <img src="/img/1.jpg" alt="">
         </div>
         <div class="content-2">
-            <h2>Card Hover</h2>
+            <h2>Easter Island</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae.</p>
         </div>
     </div>
 
     <div class="card-3">
         <div class="content-3">
-            <h2>Captain Marvel</h2>
+            <h2>Breath Of The Wild</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae. </p>
             <a href="#">Read More</a>
         </div>
