Added a new card

--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
         </div>
         <img src="/img/1.png" alt="">
     </div>
+
+    <div class="card-4">
+        <div class="face face1">
+            <div class="content-4">
+                <h2>Services</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae. </p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+        <div class="face face2">
+            <h2>88</h2>
+        </div>
+    </div>
     
     <script src="script.js"></script>
 </body>
