Added a new card

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
             <h2>88</h2>
         </div>
     </div>
+
+    <div class="card-5">
+        <div class="face-5">
+            <div class="imgbox-5">
+                <img src="/img/2.png" alt="">
+            </div>
+        </div>
+        <div class="face-52">
+            <div class="content-5">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto eius tempora tenetur numquam adipisci sed.</p>
+                <a href="">Read More</a>  
+            </div>
+        </div>
+    </div>
     
     <script src="script.js"></script>
 </body>
