Added a new card

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
             </div>
         </div>
     </div>
+
+    <div class="card-6">
+        <div class="imgbox-6">
+            <img src="/img/2.jpg" alt="">
+        </div>
+        <div class="details-6">
+            <h2>Elon Musk<br>
+                <span>Real-life Iron Man</span>
+            </h2>
+        </div>
+    </div>
     
     <script src="script.js"></script>
 </body>
