--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
             </h2>
         </div>
     </div>
+
+    <div class="card-7">
+        <div class="imgbox-7">
+            <img src="/img/3.jpg" alt="">
+        </div>
+        <div class="content-7">
+            <h3>post title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quo dolorum consequatur provident commodi similique perspiciatis tempora eaque fugit dolor.</p>
+            <a href="#">Read More</a>
+        </div>    
+    </div>
     
     <script src="script.js"></script>
 </body>
