fixed a bug in the src of the images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="card-2">
         <div class="imgbox-2">
-            <img src="/img/1.jpg" alt="">
+            <img src="./img/1.jpg" alt="">
         </div>
         <div class="content-2">
             <h2>Easter Island</h2>
@@ -33,7 +33,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, accusantium quae. </p>
             <a href="#">Read More</a>
         </div>
-        <img src="/img/1.png" alt="">
+        <img src="./img/1.png" alt="">
     </div>
 
     <div class="card-4">
@@ -52,7 +52,7 @@
     <div class="card-5">
         <div class="face-5">
             <div class="imgbox-5">
-                <img src="/img/2.png" alt="">
+                <img src="./img/2.png" alt="">
             </div>
         </div>
         <div class="face-52">
@@ -65,7 +65,7 @@
 
     <div class="card-6">
         <div class="imgbox-6">
-            <img src="/img/2.jpg" alt="">
+            <img src="./img/2.jpg" alt="">
         </div>
         <div class="details-6">
             <h2>Elon Musk<br>
@@ -76,7 +76,7 @@
 
     <div class="card-7">
         <div class="imgbox-7">
-            <img src="/img/3.jpg" alt="">
+            <img src="./img/3.jpg" alt="">
         </div>
         <div class="content-7">
             <h3>post title</h3>
